--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ build/MBTL_Training/PYZ-00.pyz
 build/MBTL_Training/PYZ-00.toc
 build/MBTL_Training/warn-MBTL_Training.txt
 build/MBTL_Training/xref-MBTL_Training.html
+*.pyc
