--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 build/MBTL_Training/MBTL_Training.exe.manifest
 build/MBTL_Training/warn-MBTL_Training.txt
 build/MBTL_Training/xref-MBTL_Training.html
+*.spec
+*.pyc
