--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ build/MBTL_Training/PYZ-00.pyz
 build/MBTL_Training/MBTL_Training.pkg
 build/MBTL_Training/MBTL_Training.exe.manifest
 build/MBTL_Training/base_library.zip
+color_test
