ムーンドライブ時のバグ修正
ムーンドライブ時のバグ修正
その他表示方法変更

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ build/MBTL_Training/MBTL_Training.pkg
 build/MBTL_Training/MBTL_Training.exe.manifest
 build/MBTL_Training/base_library.zip
 color_test
+test_case.text
