--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ build/MBTL_Training/MBTL_Training.exe.manifest
 build/MBTL_Training/base_library.zip
 color_test
 test_case.text
+src/Fighting_Game_Indicator
